# soma-workflow

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  MPI_workflow_runner.html  README.markdown  README.md  README.txt  appveyor.yml  changelog.html  changes_swf3.html  client_API.html  concepts.html  config-cpp-lib.template  config-sip.template  errors_troubleshooting.html  examples.html  ez_setup.py  fortest  genindex.html  gui.html  index.html  install_config.html  objects.inv  pack2pypi.sh  packaging.sh  project_info.cmake  py-modindex.html  scheduler.html  search.html  searchindex.js  setup.py  setup_client.py  setup_server.py  share_func.cmake  soma-pipeline.bcg  status_list.html  tox.ini  (+1 more)
.doctrees/: MPI_workflow_runner.doctree  changelog.doctree  changes_swf3.doctree  client_API.doctree  concepts.doctree  environment.pickle  errors_troubleshooting.doctree  examples.doctree  gui.doctree  index.doctree  install_config.doctree  scheduler.doctree  status_list.doctree  workflow_creation.doctree
.github/workflows/: main.yml
CMakeModules/: FindLibDRMAA.cmake  FindSIP.cmake  FindSphinx.cmake  Findpython.cmake
_images/: inheritance-6800290190c1a8bb9560e591a2a41ddda7e7fa2e.png.map
_modules/: client.html  client_types.html  custom_jobs.html  errors.html  index.html  param_link_functions.html  scheduler.html
_modules/soma_workflow/: client_types.html
_modules/soma_workflow/schedulers/: local_scheduler.html  pbspro_scheduler.html
_sources/: MPI_workflow_runner.txt  changelog.txt  changes_swf3.txt  client_API.txt  errors_troubleshooting.txt  examples.txt  index.txt  install_config.txt  workflow_creation.txt
_static/: documentation_options.js
cmake/: soma-workflow-config.cmake.in
config/: config.py.in
doc/: Makefile  jobDatabaseDiagram.odg  jobsDiagram.odg  make.bat  upload2github
doc/source/: MPI_workflow_runner.txt  architecture.txt  changelog.txt  changes_swf3.txt  client_API.txt  client_install_config.txt  concepts.txt  conf.py  conf_github.py  errors_troubleshooting.txt  examples.txt  gui.txt  index.txt  install_config.txt  light_mode_config.txt  overview.txt  scheduler.txt  server_install_config.txt  status_list.txt  workflow_creation.txt
doc/source/images/: ServerManagementMenu.odg
doc/welcome_page/source/: conf.py  index.txt
documents/: memo_github.md  memo_setup_unit_test.md
documents/march_2013/: InstallSoma-workflowgabriel.odt  MPIworkflowrunner.odt  Memoreleasesoma-workflow.odt  Soma-workflow022013--Tasks.odt  Soma-workflowFevrier2013.odt  memo_restart_soma-workflow.md
python/drmaa/: wrappers.py
python/soma/: jobs.py
python/soma/jobs/: PyroJobServer.py  asynchronous_transfers.py  config.py  connection.py  connectionCheck.py  constants.py  drmaaJobScheduler.py  fileCopier.py  fileTransfer.py  files_transfer.py  jobClient.py  jobDatabase.py  jobLocalConnection.py  jobRemoteConnection.py  jobScheduler.py  jobServer.py  localClient.py  localJobProcess.py  newJobScheduler.py  pickleableJobScheduler.py  pyroJobServer.py  remoteJobScheduler.py
python/soma/workflow/: MPI_workflow_runner.py  clean_server.py  client.py  client_types.py  config.py  configuration.py  connection.py  constants.py  database_server.py  engine.py  engine_types.py  errors.py  jobScheduler.py  jobServer.py  localJobProcess.py  observer.py  scheduler.py  setup_client2server.py  setup_server.py  start_database_server.py  start_workflow_engine.py  testmpi.py  testmpi2.py  testmpi3.py  testmpi4.py  testmpi_error_proof.py  transfer.py  utils.py  version.py  workflow.py
python/soma_workflow/: MPI_workflow_runner.py  clean_server.py  client.py  client_types.py  configuration.py  connection.py  constants.py  custom_jobs.py  database_server.py  engine.py  engine_types.py  errors.py  info.py  observer.py  param_link_functions.py  scheduler.py  setup_client2server.py  setup_server.py  sro.py  start_database_server.py  start_workflow_engine.py  subprocess.py  transfer.py  utils.py  version.py  zro.py
python/soma_workflow/check_requirement/: __main__.py  drmaa.py
python/soma_workflow/gui/: JobInfo.ui  RequirePW.ui  ServerNewDlg.ui  connection_dlg.ui  engine_controller_widget.ui  graphWidget.ui  local_scheduler_widget.ui  main_window.ui  resource_wf_select.ui  search_widget.ui  submissionDlg.ui  sw_mini.ui  wf_status_name_date.ui  workflowExampleDlg.ui  workflowGui.py
python/soma_workflow/schedulers/: drmaa2_scheduler.py  drmaa_scheduler.py  local_scheduler.py  mpi_scheduler.py  pbspro_scheduler.py  slurm_scheduler.py
python/soma_workflow/test/: __main__.py  test.py  test_serialization.py  test_workflow.py  test_workflow_r.py  utils.py  workflow_examples.py  workflow_local.py  workflow_shared.py  (+2 more)
python/somadrmaa/: __init__.py  const.py  errors.py  helpers.py  nt.py  wrappers.py
python/somadrmaa2/: __init__.py  wrappers.py
sandbox/processes/: T1BiasCorrection.py  preparesubject.py
soma-env/: soma-env-recipe.yaml
src/: soma_src.pro
src/drmaaJobs/: CMakeLists.txt  drmaajobs.cc  drmaajobs.h  libdrmaajobs.pro
src/drmaaJobs/drmaa/: drmaa.h  drmaa_1_0_13.h  drmaa_empty.c
src/jobs/: CMakeLists.txt  drmaamanip.cc  drmaamanip.h  job_manager.cc  job_manager.h  job_runner.cc  job_runner.h  job_template.cc  job_template.h
src/jobs/drmaa/: drmaa.h
src/sip/: CMakeLists.txt  jobs.sip  sip.pro
src/test/: main.cpp
test/: TestDrmaaCTypes.py  TestSomadrmaajobssip.py  TestSomadrmaajobssipThreads.py  config.py
test/PlatformTest/: ubuntu.sh
test/config_examples/: soma-workflow-scheduler.cfg  soma-workflow.cfg
test/databaseserver/: TestDatabaseThreads.py  TestDateDatabase.py  TestJobServer.py  TestJobServerThreads.py
test/jobs/: GeneralTest.py  TestJobScheduler.py  TestJobServer.py  TestJobs.py  TestJobsConfig.py  TestWorkflow.py  WorkflowExample.py  runWUI.py
test/tunnelssh/: TestTunnelParamikoPart1.py  TestTunnelParamikoPart2.py  TestTunnelServer.py
test/workflow/: TestWorkflow.py
test/workflow_examples/: simple_example.py  simple_example_group.py  simple_transfer.py  srp_example.py  working_dir_transfer.py
(+180 files in other folders)
